--- a/unip/src/main/resources/application.properties
+++ b/unip/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=01234
 spring.jpa.show-sql=true 
 spring.jpa.generate-ddl=true 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+db.url=jdbc:h2:D:/universidade 
+db.username=dba
+db.password=01234
