--- a/unip/src/main/resources/.properties
+++ b/unip/src/main/resources/.properties
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 db.url=jdbc:h2:D:/universidade 
 db.username=dba
 db.password=01234
+
+nome.vazio=nome não pode estar vazio 
+nascimento.nulo=data de nascimento não deve estar vazia 
+nascimento.menor=aluno deve ser maior de 18 anos
